- Added loading splash screen - Added asset for windows frame - Added a test button for upload function - Modified build.ts to add window folder to build

--- a/resources/views/app.edge
+++ b/resources/views/app.edge
@@ -9,5 +9,17 @@
 <body>
   <a href="/">Home</a> | <a href="{{ route('PostsController.create') }}">Create Post</a>
   @!section('page')
+  <script>
+    const {dialog} = require('electron').remote;
+    document.querySelector('#selectBtn').addEventListener('click', function (event) {
+        dialog.showOpenDialog({
+            properties: ['openFile', 'multiSelections']
+        }, function (files) {
+            if (files !== undefined) {
+                // handle files
+            }
+        });
+    });
+  </script>
 </body>
 </html>
